<resources>
    <string name="app_name">BestWeatherApp</string>

    <string name="city_list_title">Cities</string>
    <string name="search_city">Search City</string>
    <string name="no_internet_connection">No internet connection…</string>
    <string name="not_found">Not found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="now">Now</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="temp">%1$d°C</string>
    <string name="wind">Wind</string>
    <string name="wind_speed">%s m/s</string>
    <string name="humidity_percent">%s \%%</string>
    <string name="humidity">Humidity</string>
    <string name="refresh">Refresh</string>
</resources>