<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.leviancode.android.infotextest.ui.screens.city_weather.CityWeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                tools:title="Kyiv"
                app:navigationIconTint="?colorOnSurface"
                app:menu="@menu/refresh_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:0.6"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Clear sky"
                    android:text="@{viewModel.currentWeather.description}"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"/>

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    app:loadImage="@{viewModel.currentWeather.icon}"
                    android:src="@android:drawable/ic_menu_info_details" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginEnd="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min"
                            android:textSize="14sp"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_temp_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="18sp"
                            android:textColor="#59A7FF"
                            android:text="@{@string/temp(viewModel.currentWeather.temp.min)}"
                            tools:text="25°C" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/now"
                            android:textSize="14sp"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_temp_now"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:text="@{@string/temp(viewModel.currentWeather.temp.current)}"
                            tools:text="25°C" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginStart="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max"
                            android:textSize="14sp"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_temp_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="18sp"
                            android:textColor="#FFB459"
                            android:text="@{@string/temp(viewModel.currentWeather.temp.max)}"
                            tools:text="25°C" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginEnd="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textStyle="bold"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_wind" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2 km/h"
                            android:text="@{@string/wind_speed(String.valueOf(viewModel.currentWeather.windSpeed))}"
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginStart="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textStyle="bold"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_humidity" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="60 %"
                            android:text="@{@string/humidity_percent(String.valueOf(viewModel.currentWeather.humidity))}"
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>


        <include layout="@layout/layout_loading"
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE, default = gone}"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
